container/kubermatic-dev-ui/k8s-manifests/kubermatic-dev-ui.headless-vnc.deployment.yaml
#### POD config (run one time)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubermatic-dev-ui
  labels:
    application: kubermatic-dev-ui
spec:
  # 1 Pods should exist at all times.
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      application: kubermatic-dev-ui
  template:
    metadata:
      labels:
        application: kubermatic-dev-ui
    spec:
      terminationGracePeriodSeconds: 5
      imagePullSecrets:
        - name: toschneck-devui-pull-secret
      containers:
      - name: kubermatic-dev-ui
#        image: consol/debian-xfce-vnc@sha256:108675d167724b9f0ecbda8464ff66c8fbe42ccd0eb5647c4f8fc8205a9c136d
        image: quay.io/toschneck/kubermatic-dev-ui:0.1.0
#        image: quay.io/toschneck/kubermatic-dev-ui:base-debian-xfce-vnc-k1-1.5.6-2023-01-30
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /headless/mnt
            name: workspace
        args:
          - --wait
#        - /bin/bash
#        - -c
#        - 'trap : TERM INT; sleep infinity & wait'
        ### make normal UI startup to connect via: oc rsh <pod-name> bash
        #- '--tail-log'
        ## checks that vnc server is up and running
        livenessProbe:
          httpGet:
            path: /
            port: 6901
            scheme: HTTP
        ### checks if http-vnc connection is working
        readinessProbe:
          httpGet:
            path: /
            port: 6901
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 10
        resources:
          requests:
            cpu: '2'
            memory: 3Gi
          limits:
            cpu: '2'
            memory: 3Gi
      #TODO remove later
        securityContext:
          runAsUser: 0
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: kubermatic-dev-ui-workspace
