container/kubermatic-dev-ui/k8s-manifests/svc.ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kubermatic-dev-ui
  name: kubermatic-dev-ui
spec:
#  externalName: kubermatic-dev-ui
  ports:
  - name: http-port-tcp
    protocol: TCP
    port: 6901
    targetPort: 6901
  - name: vnc-port-tcp
    protocol: TCP
    port: 5901
    targetPort: 5901
  selector:
    application: kubermatic-dev-ui
#  type: NodePort
  #### connect by: http://NODEIP:NODEPORT/?password=vncpassword
# Use type loadbalancer if needed
#  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    application: kubermatic-dev-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kubermatic-dev-ui
spec:
  ingressClassName: nginx
  rules:
  - host: user-01.min-max-1.lab.kubermatic.io
    http:
      paths:
      - backend:
          service:
            name: kubermatic-dev-ui
            port:
              name: http-port-tcp
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - user-01.min-max-1.lab.kubermatic.io
    secretName: ing-ui-tls
